# Projects-ptsd-clinician-support

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
config/: safety_rules.yaml  treatment_rules.json
data/raw/guidelines/: ptsd_guidelines.json
docs/: architecture.md  auth.md  care-plans.md  cases.md  data-model.md  deployment.md  differential.md  guidelines.md  notes.md  postgres-validation.md  postgres.md  rules.md  safety.md  startup.md  worker.md
scripts/: bootstrap_backend.py  create_api_key.py  enqueue_ingestion_job.py  ingest_guidelines.py  ingest_literature.py  migrate_db.py  query_literature.py  run_server.py  run_worker.py  validate_postgres.py
src/ptsd_support/: __init__.py
src/ptsd_support/api/: __init__.py  app.py
src/ptsd_support/db/: __init__.py  adapter.py  migrations.py  schema.py
src/ptsd_support/db/migrations/: 0001_initial.sql  0002_seed_conditions.sql  0003_clinician_workflow.sql  0004_auth_and_jobs.sql  0005_orgs_and_job_retries.sql  0006_token_expiry.sql
src/ptsd_support/ingest/: __init__.py  guidelines.py  literature.py
src/ptsd_support/services/: __init__.py  assessment.py  audit.py  auth.py  care_plans.py  cases.py  differential.py  guidelines.py  jobs.py  notes.py  recommendations.py  retrieval.py  rules.py
tests/: test_audit.py  test_auth.py  test_care_plans.py  test_cases.py  test_db.py  test_differential.py  test_jobs.py  test_notes.py  test_postgres_adapter.py  test_postgres_live.py  test_rules.py  test_smoke.py  test_validate_postgres.py
(+6 files in other folders)
